Implemented TokenProvider for generationg jwt token. Also I implemented PasswordHasher class with two methods - HashPassword and VerifyPassword

--- a/AiCalendar.WebApi/appsettings.json
+++ b/AiCalendar.WebApi/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "super-duper-secret-key-that-noone-knows",
+    "Issuer": "AiCalendar",
+    "Audience": "AiCalendarUsers",
+    "AccessTokenExpiration": 60, // in minutes
+  }
 }
