--- a/AiCalendar.WebApi/Properties/launchSettings.json
+++ b/AiCalendar.WebApi/Properties/launchSettings.json
@@ -18,13 +18,15 @@
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "launchUrl": "{Scheme}://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTPS_PORTS": "5001",
+        "ASPNETCORE_HTTP_PORTS": "5000"
       },
-      "publishAllPorts": true,
-      "useSSL": true
+      "publishAllPorts": false,
+      "useSSL": true,
+      "httpPort": 5000,
+      "sslPort": 5001
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
