Added .net aspire orchestration support. Also i had to make some fixes

--- a/AiCalendar.WebApi/appsettings.json
+++ b/AiCalendar.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AiCalendarDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=.;Database=AiCalendarDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
   },
   "Logging": {
     "LogLevel": {
@@ -13,6 +13,6 @@
     "Secret": "super-duper-secret-key-that-noone-knows",
     "Issuer": "AiCalendar",
     "Audience": "AiCalendarUsers",
-    "AccessTokenExpiration": 60, // in minutes
+    "ExpirationInDays": 7 // in days
   }
 }
