--- a/AiCalendar.WebApi/AiCalendar.WebApi.csproj
+++ b/AiCalendar.WebApi/AiCalendar.WebApi.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AiCalendar.ServiceDefaults\AiCalendar.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
