--- a/AiCalendar.AppHost/AiCalendar.AppHost.csproj
+++ b/AiCalendar.AppHost/AiCalendar.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AiCalendar.MCPServer\AiCalendar.MCPServer.csproj" />
     <ProjectReference Include="..\AiCalendar.WebApi\AiCalendar.WebApi.csproj" />
   </ItemGroup>
 
