Added basic EventService and EventTools in MCP server project

--- a/AiCalendar.MCPServer/AiCalendar.MCPServer.csproj
+++ b/AiCalendar.MCPServer/AiCalendar.MCPServer.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AiCalendar.ServiceDefaults\AiCalendar.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\AiCalendar.WebApi\AiCalendar.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
