--- a/AiCalendar.AppHost/prometheus.yml
+++ b/AiCalendar.AppHost/prometheus.yml
@@ -26,9 +26,8 @@ scrape_configs:
 
   - job_name: "node-exporter"
     static_configs:
-     - targets: ['host.docker.internal:9100']
+     - targets: ['nodeexporter:9100']
     scheme: https
     metrics_path: /metrics
-    tls_config:
-      insecure_skip_verify: true
+
    
