--- a/AiCalendar.AppHost/prometheus.yml
+++ b/AiCalendar.AppHost/prometheus.yml
@@ -27,7 +27,8 @@ scrape_configs:
   - job_name: "node-exporter"
     static_configs:
      - targets: ['nodeexporter:9100']
-    scheme: https
     metrics_path: /metrics
+    tls_config:
+      insecure_skip_verify: true
 
    
