--- a/AiCalendar.Blazor/AiCalendar.Blazor.csproj
+++ b/AiCalendar.Blazor/AiCalendar.Blazor.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AiCalendar.ServiceDefaults\AiCalendar.ServiceDefaults.csproj" />
   </ItemGroup>
 
