--- a/AiCalendar.Blazor/AiCalendar.Blazor.csproj
+++ b/AiCalendar.Blazor/AiCalendar.Blazor.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AiCalendar.ServiceDefaults\AiCalendar.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\AiCalendar.WebApi\AiCalendar.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
