Some fixes for the user authentication
Try second to store the token using http only cookie, but didn't successfully make it to work. For now i will stick to storing the token in local storage

--- a/AiCalendar.Blazor/appsettings.json
+++ b/AiCalendar.Blazor/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ApiSettings": {
     "BaseUrl": "https://localhost:7031"
+  },
+  "Jwt": {
+    "Secret": "super-duper-secret-key-that-noone-knows",
+    "Issuer": "AiCalendar",
+    "Audience": "AiCalendarUsers",
+    "ExpirationInDays": 7 // in days
   }
 }
